# models/comment.go
@@ -1,0 +1,47 @@
+package models
+
+import "github.com/go-swagger/go-swagger/strfmt"
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+/*
+Comment comment
+
+swagger:model Comment
+*/
+type Comment struct {
+
+	/* Author author
+	 */
+	Author *User `json:"author,omitempty"`
+
+	/* Comments comments
+	 */
+	Comments []*Comment `json:"comments,omitempty"`
+
+	/* CreatedDate created date
+	 */
+	CreatedDate int64 `json:"createdDate,omitempty"`
+
+	/* ID id
+	 */
+	ID int64 `json:"id,omitempty"`
+
+	/* Text text
+	 */
+	Text string `json:"text,omitempty"`
+
+	/* UpdatedDate updated date
+	 */
+	UpdatedDate int64 `json:"updatedDate,omitempty"`
+
+	/* Version version
+	 */
+	Version int64 `json:"version,omitempty"`
+}
+
+// Validate validates this comment
+func (m *Comment) Validate(formats strfmt.Registry) error {
+	return nil
+}
